# fedora-messaging

./: .coveragerc  .gitignore  .gitleaks.toml  .license_strategy.ini  .mergify.yml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CODEOWNERS  Containerfile.dev  MANIFEST.in  Makefile  README.rst  SECURITY.md  codecov.yml  config.toml.example  container-compose.yml  dev-requirements.txt  fedora-messaging.spec  fm-consumer@.service  pyproject.toml  readthedocs.txt  requirements.txt  setup.cfg  setup.py  tox.ini  travis-integration-setup.sh
.github/workflows/: main.yml  pre-commit-autoupdate.yml
configs/: cacert.pem  fedora-cert.pem  fedora-key.pem  fedora.stg-cert.pem  fedora.stg-key.pem  fedora.stg.toml  fedora.toml  stg-cacert.pem
devel/: run-liccheck.sh
docs/: Makefile  api.rst  build-schemas-list.py  changelog.md  changelog.rst  conf.py  consuming.rst  contributing.rst  fedora-broker.rst  fedora-messaging.rst  index.rst  installation.rst  messages.rst  publishing.rst  quick-start.rst  schema-packages.txt  schemas.rst  wire-format.rst
docs/api/: api.rst  wire-format.rst
docs/sample_schema_package/: README  setup.cfg  setup.py
docs/sample_schema_package/mailman_messages/: messages.py
docs/sample_schema_package/mailman_messages/tests/: __init__.py  test_messages.py
docs/sample_schema_package/mailman_schema/: schema.py  utils.py
docs/sample_schema_package/mailman_schema/tests/: test_schema.py
docs/tutorial/: conversion.rst  exceptions.rst  index.rst  installation.rst  schemas.rst  usage.rst
docs/user-guide/: cli.rst  configuration.rst  consuming.rst  installation.rst  messages.rst  quick-start.rst  schemas.rst  testing.rst
fedora_messaging/: __init__.py  _session.py  api.py  callbacks.py  cli.py  config.py  constants.py  example.py  exceptions.py  message.py  mypy.cfg  schema_utils.py  session.py  signals.py  testing.py
fedora_messaging/tests/: __init__.py
fedora_messaging/tests/fixtures/: cert.pem  good_conf.toml  good_msg_dump.txt  invalid_msg_dump.txt  key.pem  msg_without_id_dump.txt
fedora_messaging/tests/integration/: test_api.py  test_cli.py  test_publish_consume.py  test_twisted_api.py
fedora_messaging/tests/unit/: test_api.py  test_callbacks.py  test_cli.py  test_config.py  test_example.py  test_exceptions.py  test_message.py  test_schema_utils.py  test_session.py  test_testing.py
fedora_messaging/tests/unit/twisted/: test_consumer.py  test_factory.py  test_protocol.py  test_service.py  utils.py
fedora_messaging/twisted/: consumer.py  factory.py  monitor.py  producer.py  protocol.py  service.py  stats.py
news/: +diff-cover.dev  +dont_dist_tests.dev  +fedora-messaging-git-hook-messages.docs  +generic_pre_commit_checks.dev  +invalid_headers.feature  +pkg_resources.other  +py312.feature  +pytz.other  +replay_topic_prefix.bug  +ruff.dev  +testing_context_manager.feature  +twisted_publish.feature  +validation-summary.feature  109.bug  110.bug  121.feature  126.feature  136.feature  159.feature  187.feature  203.feature  208.bug  212.bug  227.feature  240.bug  241.dev  252.feature  294.dev  332.feature  359.feature  380.feature  961b82d.dev  97.bug  C732c7fb.dev  Ceba336b.feature  PR108.feature  PR119.api  PR139.feature  PR230.feature  PR232.dev  (+36 more)
packit/installation/: main.fmf
tests/: __init__.py  conftest.py  utils.py
tests/fixtures/: bad_cb  bad_conf.toml  callback.py  cert.pem  good_conf.toml  msg_without_topic_dump.txt
tests/integration/: test_api.py  test_cli.py  utils.py
tests/unit/: test_api.py  test_cli.py  test_config.py  test_example.py  test_message.py  test_schema_utils.py  test_testing.py
tests/unit/twisted/: test_consumer.py  test_factory.py  test_monitor.py  test_protocol.py  test_service.py  test_stats.py  utils.py
