[tool.poetry]
name = "fedora_messaging"
version = "3.5.0"
description = "A set of tools for using Fedora's messaging infrastructure"
authors = [
    "Fedora Infrastructure <admin@fedoraproject.org>"
]
license = "GPLv2+"
readme = "README.rst"
repository = "https://github.com/fedora-infra/fedora-messaging"
maintainers = ["Fedora Infrastructure Team"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
keywords = ["fedora"]
packages = [
    { include = "fedora_messaging" },
]
include = [
    { path = "docs", format = "sdist" },
    { path = "configs", format = "sdist"},
    { path = "*.service", format = "sdist"},
    { path = "config.toml.example", format = "sdist"},
    { path = "tests/*", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
blinker = "^1.5"
click = "^8.1.3"
crochet = ">=1.12.0"
jsonschema = "^4.17.3"
pika = "^1.3.0"
pyopenssl = ">=21.0.0"
pytz = ">=2023.3"
service-identity = ">=21.1.0"
tomli = "^2.0.1"
twisted = ">=22.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"
liccheck = "^0.9.1"
mock = "^5.1.0"
pyopenssl = ">=21.0.0"
pytest = "^7.4.0 || ^8.0.0"
pytest-mock = "^3.11.1"
pytest-twisted = "^1.14.0"
sphinx = [
    {version = "<=5.3.0", python = ">=3.8, <3.9"},
    {version = "^7.2.4", python = "^3.9"}
]
towncrier = "^23.6.0"
treq = "^22.2.0 || ^23.0.0"
twisted = ">22.4.0"

[tool.poetry.group.docs.dependencies]
coverage = "^7.3.0"
mock = "^5.1.0"
pytest-twisted = "^1.14.0"
sphinx = [
    {version = "<=5.3.0", python = ">=3.6, <3.9"},
    {version = "^7.2.4", python = "^3.9"}
]
towncrier = "^23.6.0"


[tool.poetry.scripts]
fedora-messaging = "fedora_messaging.cli:cli"

[tool.poetry.plugins."fedora.messages"]
"base.message" = "fedora_messaging.message:Message"

[tool.towncrier]
package = "fedora_messaging"
filename = "docs/changelog.rst"
directory = "news/"
title_format = "{version} ({project_date})"
issue_format = "{issue}"
template = "news/_template.rst"
wrap = false
all_bullets = true

  [[tool.towncrier.type]]
  directory = "api"
  name = "API Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true


[tool.isort]
profile = "black"
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.rstcheck]
report_level = "warning"
ignore_directives = ["automodule", "autoclass", "autofunction", "autodata"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
