[tool.poetry]
name = "fedora_messaging"
version = "3.6.0"
description = "A set of tools for using Fedora's messaging infrastructure"
authors = [
    "Fedora Infrastructure <admin@fedoraproject.org>"
]
license = "GPLv2+"
readme = "README.rst"
repository = "https://github.com/fedora-infra/fedora-messaging"
maintainers = ["Fedora Infrastructure Team"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
keywords = ["fedora"]
packages = [
    { include = "fedora_messaging" },
]
include = [
    { path = "docs", format = "sdist" },
    { path = "configs", format = "sdist"},
    { path = "*.service", format = "sdist"},
    { path = "config.toml.example", format = "sdist"},
    { path = "tests/*", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8.10"
blinker = "^1.5"
click = "^8.0.3"
crochet = ">=1.12.0"
jsonschema = "^3.2.0 || ^4.0.0"
pika = "^1.2.1"
pyopenssl = ">=21.0.0"
requests = ">=2.5.0"
service-identity = ">=21.1.0"
tomli = "^2.0.1"
twisted = ">=22.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"
liccheck = "^0.9.1"
mock = "^5.1.0"
pyopenssl = ">=21.0.0"
pytest = "^7.4.0 || ^8.0.0"
pytest-mock = "^3.11.1"
pytest-twisted = "^1.14.0"
sphinx = [
    {version = "<=5.3.0", python = ">=3.8, <3.9"},
    {version = "^7.2.4", python = "^3.9"}
]
myst-parser = ">=0.16"
towncrier = "^23.6.0"
treq = "^22.2.0 || ^23.0.0"
twisted = ">22.4.0"
ruff = ">=0.3.4"
diff-cover = ">=8.0.3"


[tool.poetry.scripts]
fedora-messaging = "fedora_messaging.cli:cli"

[tool.poetry.plugins."fedora.messages"]
"base.message" = "fedora_messaging.message:Message"

[tool.towncrier]
package = "fedora_messaging"
filename = "docs/changelog.md"
directory = "news/"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "news/_template.md"
title_format = "## {version} ({project_date})"
issue_format = "{issue}"
wrap = false

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "api"
name = "API Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bug"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "dev"
name = "Development Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "other"
name = "Other Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "author"
name = "Contributors"
showcontent = true


[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]
"fedora_messaging/testing.py" = ["S101"]
"docs/sample_schema_package/mailman_messages/tests/*" = ["S101"]
"news/get-authors.py" = ["S602", "S603", "S607"]

[tool.rstcheck]
report_level = "warning"
ignore_directives = ["automodule", "autoclass", "autofunction", "autodata"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
